--- a/ProjectMC2-SLEEPTRACKER/Base.lproj/Main.storyboard
+++ b/ProjectMC2-SLEEPTRACKER/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JZF-cT-rgy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JZF-cT-rgy">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -121,7 +121,7 @@
                                         <rect key="frame" x="20" y="0.0" width="374" height="491"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" red="0.23529411759999999" green="0.070588235289999995" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <mutableString key="text">Here was once a regular student, who lived in a garret and had no possessions. And there was also a regular huckster, to whom the house belonged, and who occupied the ground floor. A goblin lived with the huckster because at Christmas he always had a large dishful of jam, with a great piece of butter in the middle. The huckster could afford this, and therefore the goblin remained with him—which was very shrewd of the goblin.
+                                        <string key="text">Here was once a regular student, who lived in a garret and had no possessions. And there was also a regular huckster, to whom the house belonged, and who occupied the ground floor. A goblin lived with the huckster because at Christmas he always had a large dishful of jam, with a great piece of butter in the middle. The huckster could afford this, and therefore the goblin remained with him—which was very shrewd of the goblin.
 
 One evening the student came into the shop through the back door to buy candles and cheese for himself; he had no one to send, and therefore he came himself. He obtained what he wished, and then the huckster and his wife nodded good evening to him. The huckster’s wife was a woman who could do more than merely nod, for she usually had plenty to say for herself. The student nodded also, as he turned to leave, then suddenly stopped and began reading the piece of paper in which the cheese was wrapped. It was a leaf torn out of an old book; a book that ought not to have been torn up, for it was full of poetry.
 
@@ -152,7 +152,7 @@ The goblin caught up the wonderful book, which lay on the table, and popped it i
 This is a representation of human nature. We are like the goblin; we all go to visit the huckster, “because of the jam.”
 
 
-</mutableString>
+</string>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -257,8 +257,8 @@ This is a representation of human nature. We are like the goblin; we all go to v
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ebb-SP-S7w">
-                                <rect key="frame" x="23" y="130" width="41" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ebb-SP-S7w">
+                                <rect key="frame" x="23" y="130" width="150" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Name"/>
                                 <connections>
@@ -292,16 +292,15 @@ This is a representation of human nature. We are like the goblin; we all go to v
         <!--Profile-->
         <scene sceneID="HmV-vF-awN">
             <objects>
-                <viewController id="Nkl-4E-eZe" sceneMemberID="viewController">
+                <viewController id="Nkl-4E-eZe" customClass="ProfileDetailViewController" customModule="SleepTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2PY-b4-cmj">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vLi-dk-buh">
-                                <rect key="frame" x="20" y="257" width="374" height="174"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vLi-dk-buh">
+                                <rect key="frame" x="68" y="257" width="278" height="174"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="rhH-gc-aEn">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="rhH-gc-aEn">
                                         <rect key="frame" x="19" y="28" width="240" height="119.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aU2-9s-MJd">
@@ -373,19 +372,35 @@ This is a representation of human nature. We are like the goblin; we all go to v
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.41176470588235292" green="0.23137254901960785" blue="0.41176470588235292" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="rhH-gc-aEn" firstAttribute="top" secondItem="vLi-dk-buh" secondAttribute="top" constant="28" id="N2Q-uK-6WS"/>
+                                    <constraint firstAttribute="bottom" secondItem="rhH-gc-aEn" secondAttribute="bottom" constant="26.5" id="fkl-UJ-ue2"/>
+                                    <constraint firstAttribute="trailing" secondItem="rhH-gc-aEn" secondAttribute="trailing" constant="19" id="sf9-2h-SWi"/>
+                                    <constraint firstItem="rhH-gc-aEn" firstAttribute="leading" secondItem="vLi-dk-buh" secondAttribute="leading" constant="19" id="tnC-lD-UOs"/>
+                                </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pko-h7-W9b">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Full Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pko-h7-W9b">
                                 <rect key="frame" x="138" y="188" width="138" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.23529411764705882" green="0.070588235294117646" blue="0.25882352941176467" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="pko-h7-W9b" firstAttribute="top" secondItem="9cn-CF-g61" secondAttribute="top" constant="100" id="65D-RE-sbo"/>
+                            <constraint firstItem="vLi-dk-buh" firstAttribute="top" secondItem="pko-h7-W9b" secondAttribute="bottom" constant="33" id="J6X-gz-f3S"/>
+                            <constraint firstItem="vLi-dk-buh" firstAttribute="centerX" secondItem="9cn-CF-g61" secondAttribute="centerX" id="JlC-uk-FHg"/>
+                            <constraint firstItem="pko-h7-W9b" firstAttribute="centerX" secondItem="9cn-CF-g61" secondAttribute="centerX" id="RCE-Fd-xXa"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="9cn-CF-g61"/>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="Xey-O7-WO7"/>
+                    <connections>
+                        <outlet property="dateOfBirth" destination="kU1-mm-NDX" id="V4B-Av-bAF"/>
+                        <outlet property="firstName" destination="B68-Bt-rSl" id="dhP-d6-0P7"/>
+                        <outlet property="lastName" destination="bo4-dF-4vU" id="zrB-y6-JGh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qFb-aZ-6uL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
